# api/src/types/embedding.ts
@@ -1,0 +1,8 @@
+import { ObjectId } from 'mongodb';
+
+export type Embedding = {
+	pam_id: string;
+	user_id: ObjectId;
+	summary?: string;
+	is_pending?: boolean;
+};
